--- a/index.html
+++ b/index.html
@@ -6,7 +6,114 @@
   </head>
   <body>
     <h1>Pixel Painter</h1>
-    <div id="controls"></div>
-    <div id="artboard"></div>
+    <div id="controls">
+      <table id="table">
+        <tr class="pallette" id="firstRow">
+          <td style="text-align-center; background-color: #FF0000"></td>
+          <td style="text-align-center; background-color: #CC0000"></td>
+          <td style="text-align-center; background-color: #A30000"></td>
+          <td style="text-align-center; background-color: #820000"></td>
+          <td style="text-align-center; background-color: #680000"></td>
+          <td style="text-align-center; background-color: #530000"></td>
+        </tr>
+        <tr class="pallette" id="secondRow">
+          <td style="text-align-center; background-color: #FF6600"></td>
+          <td style="text-align-center; background-color: #E65C00"></td>
+          <td style="text-align-center; background-color: #B84A00"></td>
+          <td style="text-align-center; background-color: #933B00"></td>
+          <td style="text-align-center; background-color: #762F00"></td>
+          <td style="text-align-center; background-color: #4B1E00"></td>
+        </tr>
+        <tr class="pallette" id="thirdRow">
+          <td style="text-align-center; background-color: #FFFF00"></td>
+          <td style="text-align-center; background-color: #E6E600"></td>
+          <td style="text-align-center; background-color: #B8B800"></td>
+          <td style="text-align-center; background-color: #939300"></td>
+          <td style="text-align-center; background-color: #767600"></td>
+          <td style="text-align-center; background-color: #5E5E00"></td>
+        </tr>
+        <tr class="pallette" id="fourthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="pallette" id="fifthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr class="pallette" id="sixthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+
+      <button id="erase">erase</button>
+      </br> 
+      <button id="clear">clear</button>
+
+    </div>
+    <div id="artboard">
+      <div class="grid" id="firstRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="grid" id="secondRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="grid" id="thirdRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>  
+      <div class="grid" id="fourthRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="grid" id="fifthRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="grid" id="sixthRow">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+
+
+    </div>
   </body>
 </html>
