--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
     <div id="controls">
       <table id="table">
         <tr class="pallette" id="firstRow">
-          <td style="text-align-center; background-color: #FF0000"></td>
-          <td style="text-align-center; background-color: #CC0000"></td>
-          <td style="text-align-center; background-color: #A30000"></td>
-          <td style="text-align-center; background-color: #820000"></td>
-          <td style="text-align-center; background-color: #680000"></td>
-          <td style="text-align-center; background-color: #530000"></td>
+          <td style="background-color: #FF0000"></td>
+          <td style="background-color: #CC0000"></td>
+          <td style="background-color: #A30000"></td>
+          <td style="background-color: #820000"></td>
+          <td style="background-color: #680000"></td>
+          <td style="background-color: #530000"></td>
         </tr>
         <tr class="pallette" id="secondRow">
-          <td style="text-align-center; background-color: #FF6600"></td>
-          <td style="text-align-center; background-color: #E65C00"></td>
-          <td style="text-align-center; background-color: #B84A00"></td>
-          <td style="text-align-center; background-color: #933B00"></td>
-          <td style="text-align-center; background-color: #762F00"></td>
-          <td style="text-align-center; background-color: #4B1E00"></td>
+          <td style="background-color: #FF6600"></td>
+          <td style="background-color: #E65C00"></td>
+          <td style="background-color: #B84A00"></td>
+          <td style="background-color: #933B00"></td>
+          <td style="background-color: #762F00"></td>
+          <td style="background-color: #4B1E00"></td>
         </tr>
         <tr class="pallette" id="thirdRow">
-          <td style="text-align-center; background-color: #FFFF00"></td>
-          <td style="text-align-center; background-color: #E6E600"></td>
-          <td style="text-align-center; background-color: #B8B800"></td>
-          <td style="text-align-center; background-color: #939300"></td>
-          <td style="text-align-center; background-color: #767600"></td>
-          <td style="text-align-center; background-color: #5E5E00"></td>
+          <td style="background-color: #FFFF00"></td>
+          <td style="background-color: #E6E600"></td>
+          <td style="background-color: #B8B800"></td>
+          <td style="background-color: #939300"></td>
+          <td style="background-color: #767600"></td>
+          <td style="background-color: #5E5E00"></td>
         </tr>
         <tr class="pallette" id="fourthRow">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td style="background-color: #00FF00"></td>
+          <td style="background-color: #00E600"></td>
+          <td style="background-color: #00CF00"></td>
+          <td style="background-color: #00A600"></td>
+          <td style="background-color: #008500"></td>
+          <td style="background-color: #006A00"></td>
         </tr>
         <tr class="pallette" id="fifthRow">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td style="background-color: #0099FF"></td>
+          <td style="background-color: #008AE6"></td>
+          <td style="background-color: #007CCF"></td>
+          <td style="background-color: #0070BA"></td>
+          <td style="background-color: #005B96"></td>
+          <td style="background-color: #005B96"></td>
         </tr>
         <tr class="pallette" id="sixthRow">
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td style="background-color: #CC33FF"></td>
+          <td style="background-color: #B82EE6"></td>
+          <td style="background-color: #A629CF"></td>
+          <td style="background-color: #9525BA"></td>
+          <td style="background-color: #8621A7"></td>
+          <td style="background-color: #791E96"></td>
         </tr>
       </table>
 
@@ -64,55 +64,72 @@
 
     </div>
     <div id="artboard">
-      <div class="grid" id="firstRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="grid" id="secondRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="grid" id="thirdRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>  
-      <div class="grid" id="fourthRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="grid" id="fifthRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-      <div class="grid" id="sixthRow">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
-
+      <table id="grid">
+        <tr id="firstRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="secondRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="thirdRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="fourthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="fifthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="sixthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="seventhRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr id="eighthRow">
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
 
     </div>
   </body>
