--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     </div>
     <div id="artboard">
-      <table id="grid">
+      <table class="grid">
         <tr id="firstRow">
           <td></td>
           <td></td>
