--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   </head>
   <body>
     <h1>Pixel Painter</h1>
+    <div id="controls"></div>
+    <div id="artboard"></div>
+  </body>
+
+
+</html>
+
+
+
+<!-- <html>
+  <head>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="js/PixelPainter.js"></script>
+    <link href="css/PixelPainter.css" rel="stylesheet" media="screen" />
+  </head>
+  <body>
+    <h1>Pixel Painter</h1>
     <div id="controls">
       <table id="table">
         <tr class="pallette" id="firstRow">
@@ -133,4 +150,4 @@
 
     </div>
   </body>
-</html>
+</html> -->
