added code for erase/clear buttons and color array

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 
-<!-- <html>
+<!-- <html> //code for PixelPainter with html for layout that is not generated via js
   <head>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/PixelPainter.js"></script>
