--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+   <!-- // <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script> -->
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/PixelPainter.js"></script>
     <link href="css/PixelPainter.css" rel="stylesheet" media="screen" />
   </head>
