--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Pixel Painter</h1>
-    <div id="controls" class="pallette"></div>
-    <div id="artboard" class="grid"></div>
+    <div id="controls" ></div>
+    <div id="artboard" ></div>
   </body>
 
 
